Fix: creacion modelo y crontoller de CategoriaUsuario
